<resources>
    <string name="app_name">Knights</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_btn">Back</string>
    <string name="create_profile">Create Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="title_activity_fragment_sport_fixtures_tab">FragmentSportFixturesTab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="sports_fixtures">Sports Fixtures</string>
    <string name="terms">I agree to Term of Service and \nPrivacy Policy</string>
    <string name="admin_quick_access">Admin Quick Access</string>
    <string name="WelcomeHomeScreenMessage">Welcome Knight Of The Round Table</string>
    <string name="application_management">Application Management</string>
    <string name="new_fixture">New Fixture</string>
    <string name="events">Events</string>
    <string name="shop">Shop</string>
    <string name="player_review">Player Review</string>
    <string name="interactions">Interactions</string>
    <string name="new_admin">new admin</string>
    <string name="players">Players</string>
    <string name="away_result_optional">Away Result (Optional)</string>
    <string name="highlights">Highlights</string>
    <string name="upload_image">Upload Image</string>
    <string name="bus_arrival_time">Bus Arrival Time</string>
    <string name="user_rights">User Rights</string>
    <string name="save_changes">Save Changes</string>
    <string name="school_events">School Events</string>
    <string name="welcome">welcome</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="msg_token_fmt">FCM Registration Token: %1$s</string>
    <string name="select_user">Select User</string>
    <string name="select_privileges">Select Privileges</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_web_client_id">814054848260-sb61707fg2pkvn9hp0qsjnmbvordae58.apps.googleusercontent.com</string>

    <string-array name="teams_array">
        <item>First Eleven</item>
        <item>Under 19\'s</item>
        <item>Under 18\'s</item>
        <item>Under 17\'s</item>
        <item>Under 16\'s</item>
        <item>Under 15\'s</item>
        <item>Under 14\'s</item>
    </string-array>
    <string-array name="sports_array">
        <item>Netball</item>
        <item>Rugby</item>
    </string-array>
    <string name="title_activity_match_overview">MatchOverview</string>
    <string name="title_activity_match_over_view">MatchOverView</string>

</resources>