<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminHome">

    <LinearLayout
        android:id="@+id/row_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/btn_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:backgroundTint="@color/primaryColor"
                app:cardCornerRadius="14dp">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="10dp"
                    android:foreground="@drawable/ic_players" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter_bold"
                android:text="@string/players"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_addFixture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:backgroundTint="@color/primaryColor"
                app:cardCornerRadius="14dp">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="10dp"
                    android:foreground="@drawable/ic_new_fixture" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter_bold"
                android:text="@string/new_fixture"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_addEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:backgroundTint="@color/primaryColor"
                app:cardCornerRadius="14dp">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="10dp"
                    android:foreground="@drawable/ic_new_event" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter_bold"
                android:text="New Event"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="10dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toTopOf="@+id/row_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/btn_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:backgroundTint="@color/primaryColor"
                app:cardCornerRadius="14dp">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="10dp"
                    android:foreground="@drawable/ic_shop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter_bold"
                android:text="@string/shop"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:backgroundTint="@color/primaryColor"
                app:cardCornerRadius="14dp">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="10dp"
                    android:foreground="@drawable/ic_sports" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter_bold"
                android:text="Sports"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:backgroundTint="@color/primaryColor"
                app:cardCornerRadius="14dp">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="10dp"
                    android:foreground="@drawable/ic_events" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter_bold"
                android:text="@string/events"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:srcCompat="@drawable/dash_banner" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="4dp">

            <TextView
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="left"
                android:paddingHorizontal="15dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:gravity="left"
                android:paddingHorizontal="15dp"
                android:text="Matthew Joubert"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="left"
                android:paddingHorizontal="15dp"
                android:text="20 July 2024"
                android:textColor="@color/white"
                android:textSize="12dp" />
            <!--Layout for Welcome Msg-->
        </LinearLayout>

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="89dp"
            android:layout_height="88dp"
            android:background="@drawable/trans_logo"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="-30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.304">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center_horizontal"
            android:text="@string/admin_quick_access"
            android:textAllCaps="true"
            android:textColor="@color/primaryColor"
            android:textSize="19dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="5dp"
            android:background="@color/primaryColor" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/btn_interactions"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_back"
            android:orientation="vertical">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_back"
                android:foreground="@drawable/ic_interactions" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter_bold"
                android:text="@string/interactions"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_CreateAdmin"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_back"
            android:orientation="vertical">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_back"
                android:foreground="@drawable/ic_create_admin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter_bold"
                android:text="@string/new_admin"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_reviewProfiles"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_back"
            android:orientation="vertical">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_back"
                android:foreground="@drawable/ic_review_profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter_bold"
                android:text="@string/player_review"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="376dp"
        android:layout_height="49dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/row_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:paddingHorizontal="45dp"
            android:text="@string/application_management"
            android:textColor="@color/primaryColor"
            android:textSize="18dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@color/primaryColor" />
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/backgroundtheme"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/admin_nav_header"
        app:itemIconSize="25sp"
        app:itemIconTint="@color/white"
        app:itemTextAppearance="@style/CustomNavigationViewItemText"
        app:itemTextColor="@color/white"
        app:menu="@menu/admin_nav_menu"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-179dp"
        tools:layout_editor_absoluteY="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>